compiler/src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.4 from src/Parser.y
-----------------------------------------------------------------------------

state 85 contains 2 shift/reduce conflicts.
state 115 contains 9 shift/reduce conflicts.
state 154 contains 1 shift/reduce conflicts.
state 295 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> module                            (0)
	module -> 'module' modid exports_opt 'where' body   (1)
	module -> body                                     (2)
	body -> '{' top '}'                                (3)
	body -> vocurly top close                          (4)
	top -> impdecls                                    (5)
	top -> impdecls ';' topdecls                       (6)
	top -> topdecls                                    (7)
	exports_opt -> '(' exportlist ')'                  (8)
	exports_opt ->                                     (9)
	exportlist -> exportlist1                          (10)
	exportlist -> exportlist1 ','                      (11)
	exportlist -> ','                                  (12)
	exportlist ->                                      (13)
	exportlist1 -> export ',' exportlist1              (14)
	exportlist1 -> export                              (15)
	export -> qvar                                     (16)
	export -> oqtycon                                  (17)
	export -> oqtycon '(' '..' ')'                     (18)
	export -> oqtycon '(' ')'                          (19)
	export -> oqtycon '(' qcnames ')'                  (20)
	export -> 'module' modid                           (21)
	qcnames -> qcnames ',' qcname_ext                  (22)
	qcnames -> qcname_ext                              (23)
	qcname_ext -> qcname                               (24)
	qcname_ext -> 'type' qcon                          (25)
	qcname -> qvar                                     (26)
	qcname -> qcon                                     (27)
	impdecls -> impdecls ';' impdecl                   (28)
	impdecls -> impdecls ';'                           (29)
	impdecls -> impdecl                                (30)
	impdecls ->                                        (31)
	impdecl -> 'import' qual_opt modid as_opt impspec_opt   (32)
	qual_opt -> 'qualified'                            (33)
	qual_opt ->                                        (34)
	as_opt -> 'as' modid                               (35)
	as_opt ->                                          (36)
	impspec_opt -> impspec                             (37)
	impspec_opt ->                                     (38)
	impspec -> '(' exportlist ')'                      (39)
	impspec -> 'hiding' '(' exportlist ')'             (40)
	prec ->                                            (41)
	prec -> TLITINT                                    (42)
	fixity -> 'infixl'                                 (43)
	fixity -> 'infixr'                                 (44)
	fixity -> 'infix'                                  (45)
	ops -> ops ',' op                                  (46)
	ops -> op                                          (47)
	topdecls -> topdecls ';' topdecl                   (48)
	topdecls -> topdecls ';'                           (49)
	topdecls -> topdecl                                (50)
	topdecl -> cl_decl                                 (51)
	topdecl -> ty_decl                                 (52)
	topdecl -> 'instance' inst_type where_inst         (53)
	topdecl -> 'default' '(' comma_types0 ')'          (54)
	topdecl -> 'foreign' fdecl                         (55)
	topdecl -> decl                                    (56)
	cl_decl -> 'class' tycl_hdr fds where_cls          (57)
	ty_decl -> 'type' type '=' ctypedoc                (58)
	ty_decl -> data_or_newtype tycl_hdr constrs deriving   (59)
	data_or_newtype -> 'data'                          (60)
	data_or_newtype -> 'newtype'                       (61)
	tycl_hdr -> context '=>' type                      (62)
	tycl_hdr -> type                                   (63)
	decl_cls -> decl                                   (64)
	decls_cls -> decls_cls ';' decl_cls                (65)
	decls_cls -> decls_cls ';'                         (66)
	decls_cls -> decl_cls                              (67)
	decls_cls ->                                       (68)
	decllist_cls -> '{' decls_cls '}'                  (69)
	decllist_cls -> vocurly decls_cls close            (70)
	where_cls -> 'where' decllist_cls                  (71)
	where_cls ->                                       (72)
	decl_inst -> decl                                  (73)
	decls_inst -> decls_inst ';' decl_inst             (74)
	decls_inst -> decls_inst ';'                       (75)
	decls_inst -> decl_inst                            (76)
	decls_inst ->                                      (77)
	decllist_inst -> '{' decls_inst '}'                (78)
	decllist_inst -> vocurly decls_inst close          (79)
	where_inst -> 'where' decllist_inst                (80)
	where_inst ->                                      (81)
	decls -> decls ';' decl                            (82)
	decls -> decls ';'                                 (83)
	decls -> decl                                      (84)
	decls ->                                           (85)
	decllist -> '{' decls '}'                          (86)
	decllist -> vocurly decls close                    (87)
	binds -> decllist                                  (88)
	wherebinds -> 'where' binds                        (89)
	wherebinds ->                                      (90)
	fdecl -> 'import' callconv safety fspec            (91)
	fdecl -> 'import' callconv fspec                   (92)
	callconv ->                                        (93)
	safety -> 'unsafe'                                 (94)
	safety -> 'safe'                                   (95)
	fspec -> TLITSTR var '::' sigtypedoc               (96)
	fspec -> var '::' sigtypedoc                       (97)
	opt_sig -> '::' sigtype                            (98)
	opt_sig ->                                         (99)
	sigtype -> ctype                                   (100)
	sigtypedoc -> ctypedoc                             (101)
	sig_vars -> sig_vars ',' var                       (102)
	sig_vars -> var                                    (103)
	ctypedoc -> context '=>' ctypedoc                  (104)
	ctypedoc -> typedoc                                (105)
	context -> btype '~' btype                         (106)
	context -> btype                                   (107)
	ctype -> type                                      (108)
	type -> btype                                      (109)
	type -> btype '->' type                            (110)
	typedoc -> type                                    (111)
	btype -> btype atype                               (112)
	btype -> atype                                     (113)
	atype -> gtycon                                    (114)
	atype -> tyvar                                     (115)
	atype -> '!' atype                                 (116)
	atype -> '{' fielddecls '}'                        (117)
	atype -> '(' ctype ',' comma_types1 ')'            (118)
	atype -> '[' ctype ']'                             (119)
	atype -> '(' ctype ')'                             (120)
	inst_type -> ctype                                 (121)
	inst_types1 -> inst_type                           (122)
	inst_types1 -> inst_type ',' inst_types1           (123)
	comma_types0 -> comma_types1                       (124)
	comma_types0 ->                                    (125)
	comma_types1 -> ctype                              (126)
	comma_types1 -> ctype ',' comma_types1             (127)
	fds ->                                             (128)
	fds -> '|' fds1                                    (129)
	fds1 -> fds1 ',' fd                                (130)
	fds1 -> fd                                         (131)
	fd -> varids0 '->' varids0                         (132)
	varids0 ->                                         (133)
	varids0 -> varids0 tyvar                           (134)
	constrs -> '=' constrs1                            (135)
	constrs1 -> constrs1 '|' constr                    (136)
	constrs1 -> constr                                 (137)
	constr -> constr_stuff                             (138)
	constr_stuff -> btype                              (139)
	constr_stuff -> btype conop btype                  (140)
	fielddecls ->                                      (141)
	fielddecls -> fielddecls1                          (142)
	fielddecls1 -> fielddecl ',' fielddecls1           (143)
	fielddecls1 -> fielddecl                           (144)
	fielddecl -> sig_vars '::' ctype                   (145)
	deriving -> 'deriving' qtycon                      (146)
	deriving -> 'deriving' '(' ')'                     (147)
	deriving -> 'deriving' '(' inst_types1 ')'         (148)
	deriving ->                                        (149)
	decl -> sigdecl                                    (150)
	decl -> '!' aexp rhs                               (151)
	decl -> infixexp opt_sig rhs                       (152)
	rhs -> '=' exp wherebinds                          (153)
	rhs -> gdrhs wherebinds                            (154)
	gdrhs -> gdrhs gdrh                                (155)
	gdrhs -> gdrh                                      (156)
	gdrh -> '|' guardquals '=' exp                     (157)
	sigdecl -> infixexp '::' sigtypedoc                (158)
	sigdecl -> var ',' sig_vars '::' sigtypedoc        (159)
	sigdecl -> fixity prec ops                         (160)
	exp -> infixexp '::' sigtype                       (161)
	exp -> infixexp                                    (162)
	infixexp -> exp10                                  (163)
	infixexp -> infixexp qop exp10                     (164)
	exp10 -> '\\' apat apats '->' exp                  (165)
	exp10 -> 'let' binds 'in' exp                      (166)
	exp10 -> 'if' exp semi_opt 'then' exp semi_opt 'else' exp   (167)
	exp10 -> 'case' exp 'of' altslist                  (168)
	exp10 -> '-' fexp                                  (169)
	exp10 -> 'do' stmtlist                             (170)
	exp10 -> fexp                                      (171)
	semi_opt -> ';'                                    (172)
	semi_opt ->                                        (173)
	fexp -> fexp aexp                                  (174)
	fexp -> aexp                                       (175)
	aexp -> qvar '@' aexp                              (176)
	aexp -> '~' aexp                                   (177)
	aexp -> aexp1                                      (178)
	aexp1 -> aexp1 '{' fbinds '}'                      (179)
	aexp1 -> aexp2                                     (180)
	aexp2 -> qcname                                    (181)
	aexp2 -> literal                                   (182)
	aexp2 -> '(' texp ')'                              (183)
	aexp2 -> '(' tup_exprs ')'                         (184)
	aexp2 -> '[' list ']'                              (185)
	aexp2 -> '_'                                       (186)
	texp -> exp                                        (187)
	texp -> infixexp qop                               (188)
	texp -> qopm infixexp                              (189)
	texp -> exp '->' texp                              (190)
	tup_exprs -> texp commas_tup_tail                  (191)
	tup_exprs -> commas tup_tail                       (192)
	commas_tup_tail -> commas tup_tail                 (193)
	tup_tail -> texp commas_tup_tail                   (194)
	tup_tail -> texp                                   (195)
	tup_tail ->                                        (196)
	list -> texp                                       (197)
	list -> lexps                                      (198)
	list -> texp '..'                                  (199)
	list -> texp ',' exp '..'                          (200)
	list -> texp '..' exp                              (201)
	list -> texp ',' exp '..' exp                      (202)
	list -> texp '|' squals                            (203)
	lexps -> lexps ',' texp                            (204)
	lexps -> texp ',' texp                             (205)
	squals -> squals ',' qual                          (206)
	squals -> qual                                     (207)
	guardquals -> guardquals1                          (208)
	guardquals1 -> guardquals1 ',' qual                (209)
	guardquals1 -> qual                                (210)
	altslist -> '{' alts '}'                           (211)
	altslist -> vocurly alts close                     (212)
	alts -> alts1                                      (213)
	alts -> ';' alts                                   (214)
	alts1 -> alts1 ';' alt                             (215)
	alts1 -> alts1 ';'                                 (216)
	alts1 -> alt                                       (217)
	alt -> pat opt_sig alt_rhs                         (218)
	alt_rhs -> ralt wherebinds                         (219)
	ralt -> '->' exp                                   (220)
	ralt -> gdpats                                     (221)
	gdpats -> gdpats gdpat                             (222)
	gdpats -> gdpat                                    (223)
	gdpat -> '|' guardquals '->' exp                   (224)
	pat -> exp                                         (225)
	pat -> '!' aexp                                    (226)
	apat -> aexp                                       (227)
	apat -> '!' aexp                                   (228)
	apats -> apat apats                                (229)
	apats ->                                           (230)
	stmtlist -> '{' stmts '}'                          (231)
	stmtlist -> vocurly stmts close                    (232)
	stmts -> stmt stmts_help                           (233)
	stmts -> ';' stmts                                 (234)
	stmts ->                                           (235)
	stmts_help -> ';' stmts                            (236)
	stmts_help ->                                      (237)
	stmt -> qual                                       (238)
	qual -> pat '<-' exp                               (239)
	qual -> exp                                        (240)
	qual -> 'let' binds                                (241)
	fbinds -> fbinds1                                  (242)
	fbinds ->                                          (243)
	fbinds1 -> fbind ',' fbinds1                       (244)
	fbinds1 -> fbind                                   (245)
	fbinds1 -> '..'                                    (246)
	fbind -> qvar '=' exp                              (247)
	qcon -> qconid                                     (248)
	qcon -> '(' qconsym ')'                            (249)
	qcon -> sysdcon                                    (250)
	sysdcon -> '(' ')'                                 (251)
	sysdcon -> '(' commas ')'                          (252)
	sysdcon -> '[' ']'                                 (253)
	conop -> consym                                    (254)
	conop -> '`' conid '`'                             (255)
	qconop -> qconsym                                  (256)
	qconop -> '`' qconid '`'                           (257)
	gtycon -> oqtycon                                  (258)
	gtycon -> '(' ')'                                  (259)
	gtycon -> '(' commas ')'                           (260)
	gtycon -> '(' '->' ')'                             (261)
	gtycon -> '[' ']'                                  (262)
	oqtycon -> qtycon                                  (263)
	oqtycon -> '(' qtyconsym ')'                       (264)
	oqtycon -> '(' '~' ')'                             (265)
	qtycon -> TQCONID                                  (266)
	qtycon -> tycon                                    (267)
	tycon -> TCONID                                    (268)
	qtyconsym -> TQCONSYM                              (269)
	qtyconsym -> tyconsym                              (270)
	tyconsym -> TCONSYM                                (271)
	op -> varop                                        (272)
	op -> conop                                        (273)
	varop -> varsym                                    (274)
	varop -> '`' varid '`'                             (275)
	qop -> qvarop                                      (276)
	qop -> qconop                                      (277)
	qopm -> qvaropm                                    (278)
	qopm -> qconop                                     (279)
	qvarop -> qvarsym                                  (280)
	qvarop -> '`' qvarid '`'                           (281)
	qvaropm -> qvarsym_no_minus                        (282)
	qvaropm -> '`' qvarid '`'                          (283)
	tyvar -> tyvarid                                   (284)
	tyvar -> '(' tyvarsym ')'                          (285)
	tyvarid -> TVARID                                  (286)
	tyvarid -> 'as'                                    (287)
	tyvarid -> 'hiding'                                (288)
	tyvarid -> 'qualified'                             (289)
	tyvarid -> 'safe'                                  (290)
	tyvarid -> 'unsafe'                                (291)
	tyvarsym -> TVARSYM                                (292)
	var -> varid                                       (293)
	var -> '(' varsym ')'                              (294)
	qvar -> qvarid                                     (295)
	qvar -> '(' varsym ')'                             (296)
	qvar -> '(' qvarsym1 ')'                           (297)
	qvarid -> varid                                    (298)
	qvarid -> TQVARID                                  (299)
	varid -> TVARID                                    (300)
	varid -> 'as'                                      (301)
	varid -> 'hiding'                                  (302)
	varid -> 'qualified'                               (303)
	varid -> 'safe'                                    (304)
	varid -> 'unsafe'                                  (305)
	qvarsym -> varsym                                  (306)
	qvarsym -> qvarsym1                                (307)
	qvarsym_no_minus -> varsym_no_minus                (308)
	qvarsym_no_minus -> qvarsym1                       (309)
	qvarsym1 -> TQVARSYM                               (310)
	varsym -> varsym_no_minus                          (311)
	varsym -> '-'                                      (312)
	varsym_no_minus -> TVARSYM                         (313)
	varsym_no_minus -> '!'                             (314)
	qconid -> conid                                    (315)
	qconid -> TQCONID                                  (316)
	conid -> TCONID                                    (317)
	qconsym -> consym                                  (318)
	qconsym -> TQCONSYM                                (319)
	consym -> TCONSYM                                  (320)
	consym -> ':'                                      (321)
	literal -> TLITCHAR                                (322)
	literal -> TLITSTR                                 (323)
	literal -> TLITINT                                 (324)
	literal -> TLITFLOAT                               (325)
	close -> vccurly                                   (326)
	close -> error                                     (327)
	commas -> commas ','                               (328)
	commas -> ','                                      (329)
	modid -> TCONID                                    (330)
	modid -> TQCONID                                   (331)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { TOParen     $$ }
	')'            { TCParen     $$ }
	','            { TComma      $$ }
	';'            { TSemi       $$ }
	'['            { TOBrack     $$ }
	']'            { TCBrack     $$ }
	'`'            { TBackquote  $$ }
	'{'            { TOCurly     $$ }
	'}'            { TCCurly     $$ }
	vocurly        { TVOCurly    $$ }
	vccurly        { TVCCurly    $$ }
	'case'         { TCase       $$ }
	'class'        { TClass      $$ }
	'data'         { TData       $$ }
	'default'      { TDefault    $$ }
	'deriving'     { TDeriving   $$ }
	'do'           { TDo         $$ }
	'else'         { TElse       $$ }
	'foreign'      { TForeign    $$ }
	'if'           { TIf         $$ }
	'import'       { TImport     $$ }
	'in'           { TIn         $$ }
	'infix'        { TInfix      $$ }
	'infixl'       { TInfixl     $$ }
	'infixr'       { TInfixr     $$ }
	'instance'     { TInstance   $$ }
	'let'          { TLet        $$ }
	'module'       { TModule     $$ }
	'newtype'      { TNewtype    $$ }
	'of'           { TOf         $$ }
	'then'         { TThen       $$ }
	'type'         { TType       $$ }
	'where'        { TWhere      $$ }
	'_'            { TUnderscore $$ }
	'as'           { TAs         $$ }
	'hiding'       { THiding     $$ }
	'qualified'    { TQualified  $$ }
	'safe'         { TSafe       $$ }
	'unsafe'       { TUnsafe     $$ }
	'..'           { TDotdot     $$ }
	':'            { TColon      $$ }
	'::'           { TDColon     $$ }
	'='            { TEqual      $$ }
	'\\'           { TLam        $$ }
	'|'            { TVBar       $$ }
	'<-'           { TLArrow     $$ }
	'->'           { TRArrow     $$ }
	'@'            { TAt         $$ }
	'~'            { TTilde      $$ }
	'=>'           { TDArrow     $$ }
	'-'            { TMinus      $$ }
	'!'            { TBang       $$ }
	TVARID         { TVarid      $$ }
	TCONID         { TConid      $$ }
	TVARSYM        { TVarsym     $$ }
	TCONSYM        { TConsym     $$ }
	TQVARID        { TQVarid     $$ }
	TQCONID        { TQConid     $$ }
	TQVARSYM       { TQVarsym    $$ }
	TQCONSYM       { TQConsym    $$ }
	TLITINT        { TInteger    $$ }
	TLITFLOAT      { TFloat      $$ }
	TLITSTR        { TString     $$ }
	TLITCHAR       { TChar       $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	module          rules 1, 2
	body            rules 3, 4
	top             rules 5, 6, 7
	exports_opt     rules 8, 9
	exportlist      rules 10, 11, 12, 13
	exportlist1     rules 14, 15
	export          rules 16, 17, 18, 19, 20, 21
	qcnames         rules 22, 23
	qcname_ext      rules 24, 25
	qcname          rules 26, 27
	impdecls        rules 28, 29, 30, 31
	impdecl         rule  32
	qual_opt        rules 33, 34
	as_opt          rules 35, 36
	impspec_opt     rules 37, 38
	impspec         rules 39, 40
	prec            rules 41, 42
	fixity          rules 43, 44, 45
	ops             rules 46, 47
	topdecls        rules 48, 49, 50
	topdecl         rules 51, 52, 53, 54, 55, 56
	cl_decl         rule  57
	ty_decl         rules 58, 59
	data_or_newtype rules 60, 61
	tycl_hdr        rules 62, 63
	decl_cls        rule  64
	decls_cls       rules 65, 66, 67, 68
	decllist_cls    rules 69, 70
	where_cls       rules 71, 72
	decl_inst       rule  73
	decls_inst      rules 74, 75, 76, 77
	decllist_inst   rules 78, 79
	where_inst      rules 80, 81
	decls           rules 82, 83, 84, 85
	decllist        rules 86, 87
	binds           rule  88
	wherebinds      rules 89, 90
	fdecl           rules 91, 92
	callconv        rule  93
	safety          rules 94, 95
	fspec           rules 96, 97
	opt_sig         rules 98, 99
	sigtype         rule  100
	sigtypedoc      rule  101
	sig_vars        rules 102, 103
	ctypedoc        rules 104, 105
	context         rules 106, 107
	ctype           rule  108
	type            rules 109, 110
	typedoc         rule  111
	btype           rules 112, 113
	atype           rules 114, 115, 116, 117, 118, 119, 120
	inst_type       rule  121
	inst_types1     rules 122, 123
	comma_types0    rules 124, 125
	comma_types1    rules 126, 127
	fds             rules 128, 129
	fds1            rules 130, 131
	fd              rule  132
	varids0         rules 133, 134
	constrs         rule  135
	constrs1        rules 136, 137
	constr          rule  138
	constr_stuff    rules 139, 140
	fielddecls      rules 141, 142
	fielddecls1     rules 143, 144
	fielddecl       rule  145
	deriving        rules 146, 147, 148, 149
	decl            rules 150, 151, 152
	rhs             rules 153, 154
	gdrhs           rules 155, 156
	gdrh            rule  157
	sigdecl         rules 158, 159, 160
	exp             rules 161, 162
	infixexp        rules 163, 164
	exp10           rules 165, 166, 167, 168, 169, 170, 171
	semi_opt        rules 172, 173
	fexp            rules 174, 175
	aexp            rules 176, 177, 178
	aexp1           rules 179, 180
	aexp2           rules 181, 182, 183, 184, 185, 186
	texp            rules 187, 188, 189, 190
	tup_exprs       rules 191, 192
	commas_tup_tail rule  193
	tup_tail        rules 194, 195, 196
	list            rules 197, 198, 199, 200, 201, 202, 203
	lexps           rules 204, 205
	squals          rules 206, 207
	guardquals      rule  208
	guardquals1     rules 209, 210
	altslist        rules 211, 212
	alts            rules 213, 214
	alts1           rules 215, 216, 217
	alt             rule  218
	alt_rhs         rule  219
	ralt            rules 220, 221
	gdpats          rules 222, 223
	gdpat           rule  224
	pat             rules 225, 226
	apat            rules 227, 228
	apats           rules 229, 230
	stmtlist        rules 231, 232
	stmts           rules 233, 234, 235
	stmts_help      rules 236, 237
	stmt            rule  238
	qual            rules 239, 240, 241
	fbinds          rules 242, 243
	fbinds1         rules 244, 245, 246
	fbind           rule  247
	qcon            rules 248, 249, 250
	sysdcon         rules 251, 252, 253
	conop           rules 254, 255
	qconop          rules 256, 257
	gtycon          rules 258, 259, 260, 261, 262
	oqtycon         rules 263, 264, 265
	qtycon          rules 266, 267
	tycon           rule  268
	qtyconsym       rules 269, 270
	tyconsym        rule  271
	op              rules 272, 273
	varop           rules 274, 275
	qop             rules 276, 277
	qopm            rules 278, 279
	qvarop          rules 280, 281
	qvaropm         rules 282, 283
	tyvar           rules 284, 285
	tyvarid         rules 286, 287, 288, 289, 290, 291
	tyvarsym        rule  292
	var             rules 293, 294
	qvar            rules 295, 296, 297
	qvarid          rules 298, 299
	varid           rules 300, 301, 302, 303, 304, 305
	qvarsym         rules 306, 307
	qvarsym_no_minus rules 308, 309
	qvarsym1        rule  310
	varsym          rules 311, 312
	varsym_no_minus rules 313, 314
	qconid          rules 315, 316
	conid           rule  317
	qconsym         rules 318, 319
	consym          rules 320, 321
	literal         rules 322, 323, 324, 325
	close           rules 326, 327
	commas          rules 328, 329
	modid           rules 330, 331

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'{'            shift, and enter state 5
	vocurly        shift, and enter state 6
	'module'       shift, and enter state 2

	module         goto state 3
	body           goto state 4

State 1


	'module'       shift, and enter state 2


State 2

	module -> 'module' . modid exports_opt 'where' body    (rule 1)

	TCONID         shift, and enter state 71
	TQCONID        shift, and enter state 72

	modid          goto state 70

State 3

	%start_parser -> module .                           (rule 0)

	%eof           accept


State 4

	module -> body .                                    (rule 2)

	%eof           reduce using rule 2


State 5

	body -> '{' . top '}'                               (rule 3)

	'('            shift, and enter state 34
	';'            reduce using rule 31
	'['            shift, and enter state 35
	'}'            reduce using rule 31
	'case'         shift, and enter state 36
	'class'        shift, and enter state 37
	'data'         shift, and enter state 38
	'default'      shift, and enter state 39
	'do'           shift, and enter state 40
	'foreign'      shift, and enter state 41
	'if'           shift, and enter state 42
	'import'       shift, and enter state 43
	'infix'        shift, and enter state 44
	'infixl'       shift, and enter state 45
	'infixr'       shift, and enter state 46
	'instance'     shift, and enter state 47
	'let'          shift, and enter state 48
	'newtype'      shift, and enter state 49
	'type'         shift, and enter state 50
	'_'            shift, and enter state 51
	'as'           shift, and enter state 52
	'hiding'       shift, and enter state 53
	'qualified'    shift, and enter state 54
	'safe'         shift, and enter state 55
	'unsafe'       shift, and enter state 56
	'\\'           shift, and enter state 57
	'~'            shift, and enter state 58
	'-'            shift, and enter state 59
	'!'            shift, and enter state 60
	TVARID         shift, and enter state 61
	TCONID         shift, and enter state 62
	TQVARID        shift, and enter state 63
	TQCONID        shift, and enter state 64
	TLITINT        shift, and enter state 65
	TLITFLOAT      shift, and enter state 66
	TLITSTR        shift, and enter state 67
	TLITCHAR       shift, and enter state 68

	top            goto state 69
	qcname         goto state 8
	impdecls       goto state 9
	impdecl        goto state 10
	fixity         goto state 11
	topdecls       goto state 12
	topdecl        goto state 13
	cl_decl        goto state 14
	ty_decl        goto state 15
	data_or_newtypegoto state 16
	decl           goto state 17
	sigdecl        goto state 18
	infixexp       goto state 19
	exp10          goto state 20
	fexp           goto state 21
	aexp           goto state 22
	aexp1          goto state 23
	aexp2          goto state 24
	qcon           goto state 25
	sysdcon        goto state 26
	var            goto state 27
	qvar           goto state 28
	qvarid         goto state 29
	varid          goto state 30
	qconid         goto state 31
	conid          goto state 32
	literal        goto state 33

State 6

	body -> vocurly . top close                         (rule 4)

	error          reduce using rule 31
	'('            shift, and enter state 34
	';'            reduce using rule 31
	'['            shift, and enter state 35
	vccurly        reduce using rule 31
	'case'         shift, and enter state 36
	'class'        shift, and enter state 37
	'data'         shift, and enter state 38
	'default'      shift, and enter state 39
	'do'           shift, and enter state 40
	'foreign'      shift, and enter state 41
	'if'           shift, and enter state 42
	'import'       shift, and enter state 43
	'infix'        shift, and enter state 44
	'infixl'       shift, and enter state 45
	'infixr'       shift, and enter state 46
	'instance'     shift, and enter state 47
	'let'          shift, and enter state 48
	'newtype'      shift, and enter state 49
	'type'         shift, and enter state 50
	'_'            shift, and enter state 51
	'as'           shift, and enter state 52
	'hiding'       shift, and enter state 53
	'qualified'    shift, and enter state 54
	'safe'         shift, and enter state 55
	'unsafe'       shift, and enter state 56
	'\\'           shift, and enter state 57
	'~'            shift, and enter state 58
	'-'            shift, and enter state 59
	'!'            shift, and enter state 60
	TVARID         shift, and enter state 61
	TCONID         shift, and enter state 62
	TQVARID        shift, and enter state 63
	TQCONID        shift, and enter state 64
	TLITINT        shift, and enter state 65
	TLITFLOAT      shift, and enter state 66
	TLITSTR        shift, and enter state 67
	TLITCHAR       shift, and enter state 68

	top            goto state 7
	qcname         goto state 8
	impdecls       goto state 9
	impdecl        goto state 10
	fixity         goto state 11
	topdecls       goto state 12
	topdecl        goto state 13
	cl_decl        goto state 14
	ty_decl        goto state 15
	data_or_newtypegoto state 16
	decl           goto state 17
	sigdecl        goto state 18
	infixexp       goto state 19
	exp10          goto state 20
	fexp           goto state 21
	aexp           goto state 22
	aexp1          goto state 23
	aexp2          goto state 24
	qcon           goto state 25
	sysdcon        goto state 26
	var            goto state 27
	qvar           goto state 28
	qvarid         goto state 29
	varid          goto state 30
	qconid         goto state 31
	conid          goto state 32
	literal        goto state 33

State 7

	body -> vocurly top . close                         (rule 4)

	error          shift, and enter state 179
	vccurly        shift, and enter state 180

	close          goto state 178

State 8

	aexp2 -> qcname .                                   (rule 181)

	error          reduce using rule 181
	'('            reduce using rule 181
	')'            reduce using rule 181
	','            reduce using rule 181
	';'            reduce using rule 181
	'['            reduce using rule 181
	']'            reduce using rule 181
	'`'            reduce using rule 181
	'{'            reduce using rule 181
	'}'            reduce using rule 181
	vccurly        reduce using rule 181
	'else'         reduce using rule 181
	'of'           reduce using rule 181
	'then'         reduce using rule 181
	'where'        reduce using rule 181
	'_'            reduce using rule 181
	'as'           reduce using rule 181
	'hiding'       reduce using rule 181
	'qualified'    reduce using rule 181
	'safe'         reduce using rule 181
	'unsafe'       reduce using rule 181
	'..'           reduce using rule 181
	':'            reduce using rule 181
	'::'           reduce using rule 181
	'='            reduce using rule 181
	'|'            reduce using rule 181
	'<-'           reduce using rule 181
	'->'           reduce using rule 181
	'~'            reduce using rule 181
	'-'            reduce using rule 181
	'!'            reduce using rule 181
	TVARID         reduce using rule 181
	TCONID         reduce using rule 181
	TVARSYM        reduce using rule 181
	TCONSYM        reduce using rule 181
	TQVARID        reduce using rule 181
	TQCONID        reduce using rule 181
	TQVARSYM       reduce using rule 181
	TQCONSYM       reduce using rule 181
	TLITINT        reduce using rule 181
	TLITFLOAT      reduce using rule 181
	TLITSTR        reduce using rule 181
	TLITCHAR       reduce using rule 181


State 9

	top -> impdecls .                                   (rule 5)
	top -> impdecls . ';' topdecls                      (rule 6)
	impdecls -> impdecls . ';' impdecl                  (rule 28)
	impdecls -> impdecls . ';'                          (rule 29)

	error          reduce using rule 5
	';'            shift, and enter state 177
	'}'            reduce using rule 5
	vccurly        reduce using rule 5


State 10

	impdecls -> impdecl .                               (rule 30)

	error          reduce using rule 30
	';'            reduce using rule 30
	'}'            reduce using rule 30
	vccurly        reduce using rule 30


State 11

	sigdecl -> fixity . prec ops                        (rule 160)

	'`'            reduce using rule 41
	':'            reduce using rule 41
	'-'            reduce using rule 41
	'!'            reduce using rule 41
	TVARSYM        reduce using rule 41
	TCONSYM        reduce using rule 41
	TLITINT        shift, and enter state 176

	prec           goto state 175

State 12

	top -> topdecls .                                   (rule 7)
	topdecls -> topdecls . ';' topdecl                  (rule 48)
	topdecls -> topdecls . ';'                          (rule 49)

	error          reduce using rule 7
	';'            shift, and enter state 174
	'}'            reduce using rule 7
	vccurly        reduce using rule 7


State 13

	topdecls -> topdecl .                               (rule 50)

	error          reduce using rule 50
	';'            reduce using rule 50
	'}'            reduce using rule 50
	vccurly        reduce using rule 50


State 14

	topdecl -> cl_decl .                                (rule 51)

	error          reduce using rule 51
	';'            reduce using rule 51
	'}'            reduce using rule 51
	vccurly        reduce using rule 51


State 15

	topdecl -> ty_decl .                                (rule 52)

	error          reduce using rule 52
	';'            reduce using rule 52
	'}'            reduce using rule 52
	vccurly        reduce using rule 52


State 16

	ty_decl -> data_or_newtype . tycl_hdr constrs deriving    (rule 59)

	'('            shift, and enter state 93
	'['            shift, and enter state 94
	'{'            shift, and enter state 95
	'as'           shift, and enter state 96
	'hiding'       shift, and enter state 97
	'qualified'    shift, and enter state 98
	'safe'         shift, and enter state 99
	'unsafe'       shift, and enter state 100
	'!'            shift, and enter state 101
	TVARID         shift, and enter state 102
	TCONID         shift, and enter state 103
	TQCONID        shift, and enter state 104

	tycl_hdr       goto state 173
	context        goto state 123
	type           goto state 124
	btype          goto state 125
	atype          goto state 86
	gtycon         goto state 87
	oqtycon        goto state 88
	qtycon         goto state 89
	tycon          goto state 90
	tyvar          goto state 91
	tyvarid        goto state 92

State 17

	topdecl -> decl .                                   (rule 56)

	error          reduce using rule 56
	';'            reduce using rule 56
	'}'            reduce using rule 56
	vccurly        reduce using rule 56


State 18

	decl -> sigdecl .                                   (rule 150)

	error          reduce using rule 150
	';'            reduce using rule 150
	'}'            reduce using rule 150
	vccurly        reduce using rule 150


State 19

	decl -> infixexp . opt_sig rhs                      (rule 152)
	sigdecl -> infixexp . '::' sigtypedoc               (rule 158)
	infixexp -> infixexp . qop exp10                    (rule 164)

	'`'            shift, and enter state 170
	':'            shift, and enter state 142
	'::'           shift, and enter state 171
	'='            reduce using rule 99
	'|'            reduce using rule 99
	'-'            shift, and enter state 172
	'!'            shift, and enter state 143
	TVARSYM        shift, and enter state 144
	TCONSYM        shift, and enter state 145
	TQVARSYM       shift, and enter state 146
	TQCONSYM       shift, and enter state 147

	opt_sig        goto state 162
	qconop         goto state 163
	qop            goto state 164
	qvarop         goto state 165
	qvarsym        goto state 166
	qvarsym1       goto state 167
	varsym         goto state 168
	varsym_no_minusgoto state 169
	qconsym        goto state 138
	consym         goto state 139

State 20

	infixexp -> exp10 .                                 (rule 163)
